--- a/totalhr.web/areas/Admin/Views/Shared/_UserList.cshtml
+++ b/totalhr.web/areas/Admin/Views/Shared/_UserList.cshtml
@@ -1,74 +1,93 @@
 ﻿@using totalhr.Resources;
 
-@model IEnumerable<totalhr.data.EF.GetUserListForAdmin_Result>
+@model totalhr.web.Areas.Admin.Models.UserSearchResult 
+@*IEnumerable<totalhr.data.EF.GetUserListForAdmin_Result>*@
+@{
+    var foundUsers = Model.FoundUsers;
+    var searchInfo = Model.SearchInfo;
+}
 
-
-
-<table border="1" class="tabsimple">
-            <tr>
-                <th>@Account.V_UserId</th>
-                <th>@Account.V_Title</th>
-                <th>@Account.V_Firstname</th>
-                <th>@Account.V_Surname</th>
-                <th>@Account.V_Other_Names</th>
-                <th>@Account.V_Gender</th>
-                <th>@Account.V_UserName</th>
-                <th>@Account.V_Email</th>
-                <th>@Account.V_Department</th>
-                <th>@Account.V_Phone</th>
-                <th>@Account.V_Mobile</th>
-                <th>@Account.V_LastVisit</th>
-                <th>@Account.V_No_Visits</th>
-                <th>&nbsp;</th>
-            </tr>
-            @foreach(var user in Model){
-            <tr>
+    <table border="1" class="SortedTab">
+        <tr>
+            <th id="UserId" onclick="ToggleOrder(this)" class="@(searchInfo.OrderColumn == "UserId" ? "desc" :"asc")">@Account.V_UserId</th>
+            <th>@Account.V_Title</th>
+            <th id="FirstName" onclick="ToggleOrder(this)" class="@(searchInfo.OrderColumn == "FirstName" ? "desc" :"asc")">@Account.V_Firstname</th>
+            <th id="SurName" onclick="ToggleOrder(this)" class="@(searchInfo.OrderColumn == "SurName" ? "desc" :"asc")">@Account.V_Surname</th>
+            <th>@Account.V_Other_Names</th>
+            <th id="Gender" onclick="ToggleOrder(this)" class="@(searchInfo.OrderColumn == "Gender" ? "desc" :"asc")">@Account.V_Gender</th>
+            <th id="Username" onclick="ToggleOrder(this)" class="@(searchInfo.OrderColumn == "Username" ? "desc" :"asc")">@Account.V_UserName</th>
+            <th id="Email" onclick="ToggleOrder(this)" class="@(searchInfo.OrderColumn == "Email" ? "desc" :"asc")">@Account.V_Email</th>
+            <th id="Department" onclick="ToggleOrder(this)" class="@(searchInfo.OrderColumn == "Department" ? "desc" :"asc")">@Account.V_Department</th>
+            <th>@Account.V_Phone</th>
+            <th>@Account.V_Mobile</th>
+            <th id="LastVisit" onclick="ToggleOrder(this)" class="@(searchInfo.OrderColumn == "LastVisit" ? "desc" :"asc")">@Account.V_LastVisit</th>
+            <th id="NoOfVisits" onclick="ToggleOrder(this)" class="@(searchInfo.OrderColumn == "NoOfVisits" ? "desc" :"asc")">@Account.V_No_Visits</th>
+            <th>&nbsp;</th>
+        </tr>
+        @foreach (var user in foundUsers)
+        {
+        <tr>
+            <td>
+                @user.id
+            </td>
+            <td>
+                @user.TitleTerm
+            </td>
+            <td>
+                @user.firstname               
+            </td>
+            <td>
+                @user.surname
+            </td>
+            <td>
+                @user.othernames
+            </td>
+            <td>
+                @user.GenderTerm
+            </td>
+            <td>
+                @user.username
+            </td>
+            <td>
+                @user.email
+            </td>
+            <td>
+                @user.DepartmentName
+            </td>
+            <td>
+                @user.Phone
+            </td>
                 <td>
-                   @user.id
-                </td>
+                @user.Mobile
+            </td>
                 <td>
-                   @user.TitleTerm
-                </td>
+                @user.lastvisit
+            </td>
                 <td>
-                    @user.firstname               
-                </td>
-                <td>
-                    @user.surname
-                </td>
-                <td>
-                    @user.othernames
-                </td>
-                <td>
-                    @user.GenderTerm
-                </td>
-                <td>
-                    @user.username
-                </td>
-                <td>
-                    @user.email
-                </td>
-                <td>
-                    @user.DepartmentName
-                </td>
-                <td>
-                    @user.Phone
-                </td>
-                 <td>
-                    @user.Mobile
-                </td>
-                 <td>
-                    @user.lastvisit
-                </td>
-                 <td>
-                    @user.novisits
-                </td>
-                <td>
-                    <input type="button" class="edit" value="@AdminGeneric.V_More_Details" onclick="NavigateTo('/Admin/User/UserDetails/Guid/@user.userguid');" />
-                </td>
-            </tr>            
-            }
-        </table>
-
+                @user.novisits
+            </td>
+            <td>
+                <input type="button" class="edit" value="@AdminGeneric.V_More_Details" onclick="NavigateTo('/Admin/User/UserDetails/Guid/@user.userguid');" />
+            </td>
+        </tr>  
+           
+        }
+    </table>
+    
+    
 <div>
     Pagination here
 </div>
+
+<script type="text/javascript">
+    function ToggleOrder(obj){
+        var selClass = $('#' + obj.id).attr("class");        
+        if($('#frmSearchForm') != null)
+        {
+            $('#OrderColumn').val(obj.id);
+            $('#OrderDirection').val(selClass);
+            ToggleClass(obj.id, "asc", "desc");
+            $('#frmSearchForm').submit();
+        }
+    }
+</script>
