--- a/totalhr.web/Views/TimeRecording/Index.cshtml
+++ b/totalhr.web/Views/TimeRecording/Index.cshtml
@@ -9,5 +9,5 @@
     @Html.ActionLink("Record Time", "RecordTime")
 </div>
 <div>
-    @Html.ActionLink("Search Recorded Time", "Search")
+    @Html.ActionLink("Search / Edit Recorded Time", "Search")
 </div>
