--- a/totalhr.web/Views/TimeRecording/RecordTime.cshtml
+++ b/totalhr.web/Views/TimeRecording/RecordTime.cshtml
@@ -7,35 +7,31 @@
 <h2>RecordTime</h2>
 
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>TimeRecordingViewModel</legend>
+    if (string.IsNullOrEmpty(Model.ErrorMessage))
+    {
+        <fieldset>
+            <legend>TimeRecordingViewModel</legend>
+            @Html.HiddenFor(model => model.Id)
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.UserId)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.UserId)
-            @Html.ValidationMessageFor(model => model.UserId)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.UserId)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.UserId)
+                @Html.ValidationMessageFor(model => model.UserId)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.CompanyId)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.CompanyId)
-            @Html.ValidationMessageFor(model => model.CompanyId)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.StartTime)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.StartTime, new { @class = "dp"})
-            @Html.ValidationMessageFor(model => model.StartTime)
+            <div class="editor-label">
+                @Html.LabelFor(model => model.StartTime)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.StartTime, new { @class = "dp" })
+                @Html.ValidationMessageFor(model => model.StartTime)
             </div>
 
             <div class="editor-label">
@@ -49,16 +45,29 @@
             <p>
                 <input type="submit" value="Save" />
             </p>
-</fieldset>
+        </fieldset>
+
+
+        <div>
+            @Html.ActionLink("Back to Time Recording Home", "Index")
+
+        </div>
+
+        @*@section Scripts{
+            @Scripts.Render("~/bundles/jqueryval")
+
+            }*@
+    }
+    else
+    {
+        <div class="error-message">
+            @Html.DisplayFor(model => model.ErrorMessage)
+        </div>
+    }
+    if (Model.Id > 0)
+    {
+        <p>
+            @Html.ActionLink("Back to Details", "Details", new { id = Model.Id })
+        </p>
+    }
 }
-
-<div>
-    @Html.ActionLink("Back to Time Recording Home", "Index")
-</div>
-
-@*@section Scripts{
-    @Scripts.Render("~/bundles/jqueryval")
-   
-    }*@
-
-
