--- a/totalhr.web/Views/Shared/_Layout.cshtml
+++ b/totalhr.web/Views/Shared/_Layout.cshtml
@@ -14,6 +14,9 @@
     @RenderSection("scripts", required: false)
 </head>
 <body>
+    @* Check user is admin *@
+    <a href="/Admin/">Switch Context</a>
+
     @RenderBody()
 
     <div id="overlay-mask" style="display:none"></div>
