--- a/totalhr.web/areas/Admin/Content/css/SiteAdmin.css
+++ b/totalhr.web/areas/Admin/Content/css/SiteAdmin.css
@@ -426,3 +426,23 @@ table.tabsimple {
         background:#142155 url('/Content/images/sortdesc.png') right center no-repeat;
         cursor:pointer;
     }
+
+.pagination {
+    margin:5px;
+}
+
+    .pagination .intro {
+        color:#777;
+    }
+
+    .pagination a {
+        border-radius: 50%;
+        border: 3px solid #BADA55;
+        padding:5px;
+        text-decoration:none;
+    }
+
+        .pagination a.selected {
+            background-color:#BADA55;
+            color:white;
+        }
