--- a/totalhr.web/areas/Admin/Views/User/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/User/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@using totalhr.Resources;
 @using totalhr.web.Areas.Admin.Helpers;
 
-@model IEnumerable<totalhr.data.EF.SearchUserWithPaging_Result>
+@model totalhr.web.Areas.Admin.Models.UserSearchResult
 
 @{
-    ViewBag.Title = AdminGeneric.V_User_Management;  
-    var searchInfo = ViewBag.SearchInfo as totalhr.Shared.Models.UserSearchInfo; 
+    ViewBag.Title = AdminGeneric.V_User_Management;
+   
  }
 
 @section breadcrumb{
@@ -22,15 +22,15 @@
 
 
 <div class="wide">
-    @Html.Partial("_UserSearch", searchInfo)
+    @Html.Partial("_UserSearch", Model.SearchInfo)
 </div>
 <div class="wide">
     <hr />
 </div>
    <div class="wide">     
-         @Html.Partial("_UserList", new totalhr.web.Areas.Admin.Models.UserSearchResult {SearchInfo = searchInfo, FoundUsers = Model })
+         @Html.Partial("_UserList", Model)
     </div>
-
+   
 <div class="wide">
     <input type="button" value="@AdminGeneric.V_Add_User" onclick="document.location.href='/Admin/User/Create/'" />
 </div>
