--- a/totalhr.web/Views/Account/Login.cshtml
+++ b/totalhr.web/Views/Account/Login.cshtml
@@ -1,55 +1,55 @@
 ﻿@model totalhr.Shared.Models.LoginStruct
 
-
 @using totalhr.Resources;
 @using Authentication.Models;
+
 @{
+    Layout = "~/Views/Shared/_DefaultLayout.cshtml";
     ViewBag.Title = Common.Page_TT_Header_Login;
 }
 
 @{Html.RenderPartial("_FormScripts");}
 
 
-<div id="main">
-    <div class="content">
-        <h1>@Common.Page_TT_Login</h1>
 
+<div class="core">
+   
+ @using (Html.BeginRouteForm("Default", new { Controller = "Account", action = "LoginUser" }))
+{
+        @Html.ValidationSummary()
 
-         @using (Html.BeginRouteForm("Default", new { Controller = "Account", action = "LoginUser" }))
-    {
-          @Html.ValidationSummary()
+    <div class="loginbox">
+        <div class="form">
+            <h1>@Common.Page_TT_Login</h1>
 
-        <div class="formdiv midform">
-             <div class="wrapper">
-                  <div class="line">
-                    <label>@FormMessages.Label_Username</label>
-                    <span>
-                        @Html.TextBoxFor(x => x.UserName , new { size = "20", maxlength = "100", autocomplete ="off" })
-                    </span>
-                    <span class="req">*</span>
-                </div>
-                <div class="line">
-                    <label>@FormMessages.Label_Password</label>
-                    <span>@Html.PasswordFor(x => x.Password , new { size = "20", maxlength = "15", autocomplete ="off" })</span>
-                    <span class="req">*</span>
-                </div>
-                  <div class="line">
-                    <label>&nbsp;</label>
-                    <span>                       
-                        <input type="submit" value="@FormMessages.btn_Login" /></span>
-                    <span class="req"></span>
-                </div>
+            <div class="line">
+                <label>@FormMessages.Label_Username</label>
+                <span>
+                    @Html.TextBoxFor(x => x.UserName , new { size = "20", maxlength = "100", autocomplete ="off" })
+                </span>
+                <span class="req">*</span>
+            </div>
+            <div class="line">
+                <label>@FormMessages.Label_Password</label>
+                <span>@Html.PasswordFor(x => x.Password , new {  size = "20", maxlength = "15",  autocomplete ="off" })</span>
+                <span class="req">*</span>
+            </div>
+            <div class="line">
+                <label>&nbsp;</label>
+                <span>                       
+                    <input type="submit" class="btn blueb" value="@FormMessages.btn_Login" />
+                 </span>
             </div>
         </div>
-         }
-
-        <p>
+        <div class="links">
             <a href="/Account/ForgotPassword" >@Common.V_Password_Reminder</a>
-        </p>
-        <p>
-            <a href="/Account/Register" >@FormMessages.btn_Register</a>
-        </p>
+            &nbsp;
+            <a href="/Account/Register" >@Common.V_Not_Registered</a>
+        </div>
     </div>
+  }
+    
+
 </div>
 
 
