--- a/totalhr.web/Views/Shared/_Layout.cshtml
+++ b/totalhr.web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 
                 @if (ViewBag.UserIsAdmin != null && Convert.ToBoolean(ViewBag.UserIsAdmin))
                 {
-                    <a href="/Admin/" class="contextswitch">@Common.V_Switch_Context</a>
+                    <a href="/Admin/" class="contextswitch" title="@Common.V_Switch_Context_Admin_Tooltip">@Common.V_Switch_Context</a>
                 }
 
                 <div class="title" onclick="javascript:NavigateTo('/');">
@@ -29,21 +29,37 @@
                 </div>
 	
                 <div class="accountbox">
-                    <a href="/Account/Login/">@Common.Page_TT_Login</a> 
-                    <a href="/Account/Register/">@Common.V_Register</a> 
+                    <span class="profile">@ViewBag.UserName</span>
+
+                    @if (ViewBag.IsUserLoggedIn != null && Convert.ToBoolean(ViewBag.UserIsAdmin))
+                    {
+                        <a href="/account/Logout" class="logout" >@Account.btn_Loggout</a>
+                    }else{
+                        <a href="/Account/Login/">@Common.Page_TT_Login</a> 
+                    }
+                    
                 </div>
             </div>
         </div>
         
         @RenderSection("head", required: false)
 
-        @* Check user is admin *@
-        
+       <div id="main">
+           <div class="core">
+                @RenderBody()
+           </div>
+       </div>
 
-        @RenderBody()
+        <div id="footer">
+           <ul>
+               <li><a href="/Account/ExpressLogAdmin">Log as Admin</a></li>
+               <li>-</li>
+               <li><a href="/Account/ExpressLogNonAdmin">Log as Simple User</a></li>
+           </ul>
+       </div>
 
+        <!--popup stuff -->
         <div id="overlay-mask" style="display:none"></div>
-
         <div id="dvPopup" style="display:none;"> 
             <iframe id="ipopup"></iframe>       
         </div>
