--- a/totalhr.web/Views/TimeRecording/RecordTime.cshtml
+++ b/totalhr.web/Views/TimeRecording/RecordTime.cshtml
@@ -5,8 +5,10 @@
 }
 
 <h2>RecordTime</h2>
-
-
+@{
+    var culture = System.Globalization.CultureInfo.CurrentUICulture;
+    var defaultStartDate = (Model.StartTime > DateTime.MinValue) ? Model.StartTime.ToString(culture) : DateTime.Now.ToString(culture);
+}
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -18,19 +20,17 @@
             <legend>TimeRecordingViewModel</legend>
             @Html.HiddenFor(model => model.Id)
 
-            <div class="editor-label">
-                @Html.LabelFor(model => model.UserId)
-            </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.UserId)
-                @Html.ValidationMessageFor(model => model.UserId)
-            </div>
-
+            
+                @Html.HiddenFor(model => model.UserId)
+           
             <div class="editor-label">
                 @Html.LabelFor(model => model.StartTime)
             </div>
             <div class="editor-field">
-                @Html.EditorFor(model => model.StartTime, new { @class = "dp" })
+                @*@Html.EditorFor(model => model.StartTime, new { @class = "dp" })*@
+                @Html.TextBoxFor(x => x.StartTime, "" , new { @class = "datetype", onclick = "javascript:NewCal('StartTime','ddmmyyyy',true,24)" })
+
+                
                 @Html.ValidationMessageFor(model => model.StartTime)
             </div>
 
@@ -71,3 +71,5 @@
         </p>
     }
 }
+
+<script type="text/javascript" src="/Scripts/Site/DatePicker.js"></script>
