Task Scheduler service

--- a/totalhr.web/Views/TimeRecording/RecordTime.cshtml
+++ b/totalhr.web/Views/TimeRecording/RecordTime.cshtml
@@ -38,8 +38,10 @@
                 @Html.LabelFor(model => model.EndTime)
             </div>
             <div class="editor-field">
-                @Html.EditorFor(model => model.EndTime)
+                @*@Html.EditorFor(model => model.EndTime)*@
+                @Html.TextBoxFor(x => x.EndTime, "", new { @class = "datetype", onclick = "javascript:NewCal('EndTime','ddmmyyyy',true,24)" })
                 @Html.ValidationMessageFor(model => model.EndTime)
+                
             </div>
 
             <p>
