--- a/totalhr.web/Views/Account/Index.cshtml
+++ b/totalhr.web/Views/Account/Index.cshtml
@@ -43,7 +43,12 @@
 
             </div>
         </div>
+        <div class="option shadowed" onclick="document.location.href='/TimeRecording/'">
+            <h4>Time Recording System</h4>
+            <div class="cont">
 
+            </div>
+        </div>
     </div>    
 
  
